Final clean of all plot notebooks and documentation thereof.

--- a/paper/01-toy.ipynb
+++ b/paper/01-toy.ipynb
@@ -222,7 +222,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.lines.Line2D at 0x7f75977fd850>"
+       "<matplotlib.lines.Line2D at 0x7f47ec3eed10>"
       ]
      },
      "execution_count": 9,
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "97e41675-de71-4e68-abb4-520e02cac641",
    "metadata": {
     "tags": []
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "e47a7332-5f58-4539-9c18-7aed5c7ba167",
    "metadata": {
     "tags": []
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "30acd125-20a9-4997-87fc-36b2d1907854",
    "metadata": {
     "tags": []
